<resources>
    <string name="app_name">TrabLddm</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="add_contact">Add Contact</string>
    <string name="send_whatsapp">Send Whatsapp</string>
    <string name="send_email">Send Email</string>
    <string name="facebook_app_id">1046358192231666</string> <string name="fb_login_protocol_scheme">fb1046358192231666</string>
</resources>
